Reduccion de imports, ademas se eliminaron archivos innecesarios o se simplificaron cosas de algunos metodos o se declararon variables y se mandaron a salida en una sola linea